    customization of the dashboard style of a special dashboard
    * Dashboard: Param wato_folder="" means WATO root folder, use it and also
      display the title of this folder
    * Sidebar: Sorting aggregation groups in BI snapin now
    * Sidebar: Sorting sites in master control snapin case insensitive
    * Added some missing localizations (error messages, view editor)
    * FIX: fixed localization of general permissions
    * FIX: show multisite warning messages even after page reload
    * FIX: fix bug in Age ValueSpec: days had been ignored
    * FIX: fixed bug showing only sidebar after re-login in multisite
    * FIX: fixed logwatch loosing the master_url parameter in distributed setups
    * FIX: Fixed doubled var "site" in view editor (site and siteopt filter)
    * FIX: Don't crash on requests without User-Agent HTTP header
    * Downtimes: new conveniance function for downtime from now for ___ minutes.
      This is especially conveniant for scripting.
    * FIX: fixed layout of login dialog when showing up error messages

    Livecheck:
    * FIX: Compile livecheck also if diet libc is missing

1.2.0p2:
    Core:
    * simulation_mode: legacy_checks, custom_checks and active_checks
      are replaced with dummy checks always being OK
    * FIX: Precisely define order of reading of configuration files. This
      fixes a WATO rule precedence problem

    Checks & Agents:
    * FIX: Fixed syntax errors in a bunch of man pages
    * if_lancom: silently ignore Point-To-Point interfaces
    * if_lancom: add SSID to logical WLAN interface names
    * Added a collection of MSSQL checks for monitoring MSSQL servers
      (backups, tablespaces, counters)
    * New check wut_webio_io: Monitor the IO input channels on W&T Web-IO 
      devices
    * nfsmounts: reclassify "Stale NFS handle" from WARN to CRIT
    * ORACLE agent/checks: better error handling. Let SQL errors get
      through into check output, output sections even if no database