@@ -109,6 +109,9 @@
     * Sidebar: Sorting aggregation groups in BI snapin now
     * Sidebar: Sorting sites in master control snapin case insensitive
     * Added some missing localizations (error messages, view editor)
+    * Introducted multisite config option hide_languages to remove available
+      languages from the multisite selection dialogs. To hide the builtin
+      english language simply add None to the list of hidden languages.
     * FIX: fixed localization of general permissions
     * FIX: show multisite warning messages even after page reload
     * FIX: fix bug in Age ValueSpec: days had been ignored
